--- a/.github/workflows/G-DOCK.yml
+++ b/.github/workflows/G-DOCK.yml
@@ -10,8 +10,8 @@ name: G-DOCK.sh-Actions
 
 on:
 # 定时触发
-  schedule:
-    - cron: 0 22 * * *
+#  schedule:
+#    - cron: 0 22 * * *
 
 # release触发
   release:
