--- a/.github/workflows/OpenWrt-RaspberryPi3b+.yml
+++ b/.github/workflows/OpenWrt-RaspberryPi3b+.yml
@@ -10,8 +10,8 @@ name: OpenWrt-RaspberryPi3b+-Actions
 
 on:
 # 定时触发
-  schedule:
-    - cron: 0 22 * * *
+#  schedule:
+#    - cron: 0 22 * * *
 
 # release触发
   release:
