--- a/.github/workflows/OpenWrt-x86-64-Actions.yml
+++ b/.github/workflows/OpenWrt-x86-64-Actions.yml
@@ -10,9 +10,9 @@ name: OpenWrt-x86-64-Actions
 
 on:
 # 定时触发
-  schedule:
-    - cron: 0 15 * * *
-
+#  schedule:
+  #  - cron: 0 15 * * *
+#
 # release触发
 #  release:
 #    types: [published]
